# ipasuite

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  MANIFEST.in  README.md  conda-env.yaml  setup.cfg  shape-ce.sh
conda/: meta.yaml
config/: config.tpl.yaml  config.yaml  samples.full.tsv  samples.tpl.tsv  samples.tsv
ipasuite/: configurator.ipynb  launcher.py  report.ipynb
ipasuite/config/: config.tpl.yaml  samples.tpl.tsv
ipasuite/workflow/envs/: ipanemap.yml  qushape.yml  tools-win.yml  tools.yml
ipasuite/workflow/rules/: common.py  convert_qushape.smk  ipanemap.smk  refactor.smk  tools.smk
ipasuite/workflow/schemas/: config.schema.yaml  samples.schema.yaml
ipasuite/workflow/scripts/notebooks/: plotting.ipynb
ipasuite/workflow/scripts/tools/: aggregate_reactivity.py  ceq8000_to_tsv.py  footprint.py  normalize_reactivity.py  shapece_renamer.py
ipasuite/workflow/scripts/tools/utils/: ABIFReader.py  qushapeFuncFile.py
misc/: meta.yaml
resources/didymium/config/: samples.tsv
resources/didymium/fluorescence/: 1M7_37_Mg_20190801_1.txt  1M7_37_Mg_20190829_1.txt  1M7_37_Mg_20200107_1.txt  1M7_37_noMg_20190801_1.txt  1M7_37_noMg_20200103_1.txt  1M7_37_noMg_20200108_1.txt  1M7_53_Mg_20190801_1.txt  1M7_53_Mg_20190829_1.txt  1M7_53_Mg_20200107_1.txt  1M7_53_noMg_20190801_1.txt  1M7_65_Mg_20190801_1.txt  1M7_65_Mg_20190829_1.txt  1M7_65_Mg_20200107_1.txt  1M7_65_noMg_20190801_1.txt  1M7_74_Mg_20190829_1.txt  1M7_74_Mg_20200107_1.txt  1M7_74_noMg_20190801_1.txt  1M7_85_Mg_20190801_1.txt  1M7_85_Mg_20190829_1.txt  1M7_85_noMg_20190801_1.txt  BzCN_37_Mg_20200108_1.txt  BzCN_37_Mg_20200114_1.txt  BzCN_37_Mg_20200116_1.txt  BzCN_37_noMg_20200108_1.txt  BzCN_37_noMg_20200116.txt  NMIA_37_Mg_20200108_1.txt  NMIA_37_Mg_20200114_1.txt  NMIA_37_Mg_20200116_1.txt  NMIA_37_noMg_20200108_1.txt  NMIA_37_noMg_20200114_1.txt  NMIA_37_noMg_20200116_1.txt
rnasique/: __init__.py  configurator.ipynb  launcher.py
rnasique/config/: config.tpl.yaml  samples.tpl.tsv
rnasique/workflow/: Snakefile  Snakefile_agg
rnasique/workflow/envs/: doc.yml  qushape.yml  snakemake.yml
rnasique/workflow/rules/: .ipanemap.smk.swp  Desktop  common.py  convert_qushape.smk  importation.smk  ipanemap.smk  load_samples.py  tools.smk
rnasique/workflow/schemas/: config.schema.yaml
rnasique/workflow/scripts/notebooks/: footprint.ipynb
rnasique/workflow/scripts/tools/: .aggregate_reactivity.py.swp  .footprint.py.swp  aggregate_reactivity.py  footprint.py  normalize_reactivity.py  qushape_extract_reactivity.py  qushape_proj_generator.py  shift_reactivity.py  split_fasta.py  varna_wrapper.py
rnasique/workflow/scripts/tools/qushape_helper/: sip.py
rnasique/workflow/scripts/tools/utils/: qushapeFuncReport.py
shapece/: configurator.ipynb  launcher.py  report.ipynb
shapece/config/: config.tpl.yaml
shapece/workflow/: Snakefile
shapece/workflow/rules/: common.py  common.smk  importation.smk  ipanemap-py2.smk  ipanemap.smk  load_samples.py  refactor.smk  tools.smk
shapece/workflow/schemas/: config.schema.yaml
shapece/workflow/scripts/notebooks/: configure.ipynb
shapece/workflow/scripts/tools/: aggregate_reactivity.py  ceq8000_to_tsv.py  footprint.py  normalize_reactivity.py  qushape_extract_reactivity.py  qushape_proj_generator.py  shift_reactivity.py  split_fasta.py
shapece/workflow/scripts/tools/utils/: ABIFReader.py  qushapeFuncGeneral.py
workflow/: Snakefile  install.sh
workflow/docs/source/: aggregate_reactivity.rst  conf.py  configuration.md  index.md  modules.rst  normalize_reactivity.rst  quickstart.md  requirements.md  run.md  troubleshooting.md
workflow/envs/: doc.yml  ipanemap.yml  qushape.yml  snakemake.yml  tools.yml
workflow/rules/: common.smk  importation.smk  ipanemap.smk  tools.smk
workflow/schemas/: config.schema.yaml  samples.schema.yaml
workflow/scripts/: ceq8000_to_csv.py  ceq8000_to_tsv.py  footprint.ipynb
workflow/scripts/notebooks/: configure.ipynb  footprint.ipynb
workflow/scripts/tools/: aggregate_reactivity.py  normalize_reactivity.py  qushape_extract_reactivity.py  qushape_proj_generator.py  shift_reactivity.py  split_fasta.py
workflow/scripts/tools/utils/: qushapeFuncFile.py  qushapeFuncReport.py
