[metadata]
name = shapece
version = 0.1.5
description =
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, RNAFold, ViennaRNA, Snakemake, ipanemap, pipeline, shape-ce
licence = GPL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = >= 3.6
[options]
package = shapece
packages = shapece
install_requires =
    ipywidgets
    scipy
    fire
    pandas
    snakemake
    wheel
    cython
    jupyterlab
    voila
    ruamel.yaml
    

[options.entry_points]
console_scripts =
    shapece = shapece.launcher:main_wrapper
    ceq8000_to_tsv = shapece.workflow.scripts.tools.ceq8000_to_tsv:main
    aggregate_reactivity  = shapece.workflow.scripts.tools.aggregate_reactivity:main
    footprint = shapece.workflow.scripts.tools.footprint:main
    normalize_reactivity = shapece.workflow.scripts.tools.normalize_reactivity:main
    qushape_extract_reactivity = shapece.workflow.scripts.tools.qushape_extract_reactivity:main 
    qushape_proj_generator = shapece.workflow.scripts.tools.qushape_proj_generator:main 
    shift_reactivity = shapece.workflow.scripts.tools.shift_reactivity:main 
    split_fasta = shapece.workflow.scripts.tools.split_fasta:main 
