[metadata]
name = rnasique 
version = 1.0.12
description =
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, RNAFold, ViennaRNA, Snakemake, ipanemap, pipeline, shape-ce
licence = GPL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = >= 3.6
[options]
packages = find:
include_package_data = True
install_requires =
    ipywidgets
    ipyfilechooser
    scipy
    fire
    parse
    pandas
    numpy
    matplotlib
    scikit-bio
    snakemake
    wheel
    cython
    jupyterlab
    voila
    ruamel.yaml
    sip
    

[options.entry_points]
console_scripts =
    rnasique = rnasique.launcher:main_wrapper
    ceq8000_to_tsv = rnasique.workflow.scripts.tools.ceq8000_to_tsv:main
    aggregate_reactivity  = rnasique.workflow.scripts.tools.aggregate_reactivity:main
    footprint = rnasique.workflow.scripts.tools.footprint:main
    normalize_reactivity = rnasique.workflow.scripts.tools.normalize_reactivity:main
    qushape_extract_reactivity = rnasique.workflow.scripts.tools.qushape_extract_reactivity:main 
    qushape_proj_generator = rnasique.workflow.scripts.tools.qushape_proj_generator:main 
    shift_reactivity = rnasique.workflow.scripts.tools.shift_reactivity:main 
    split_fasta = rnasique.workflow.scripts.tools.split_fasta:main 
    rnasique_renamer = rnasique.workflow.scripts.tools.rnasique_renamer:main
    varna_wrapper = rnasique.workflow.scripts.tools.varna_wrapper:main
