[metadata]
name = ipasuite
version = 1.0.0
description =
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, RNAFold, ViennaRNA, Snakemake, ipanemap, pipeline, shape-ce
licence = GPL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = >= 3.6
[options]
packages = find:
include_package_data = True
install_requires =
    ipywidgets
    ipyfilechooser
    scipy
    fire
    parse
    pandas
    numpy
    matplotlib
    scikit-bio
    snakemake
    wheel
    cython
    jupyterlab
    voila
    ruamel.yaml
    sip
    colorlog
    

[options.entry_points]
console_scripts =
    ipasuite = ipasuite.launcher:main_wrapper
    ceq8000_to_tsv = ipasuite.workflow.scripts.tools.ceq8000_to_tsv:main
    aggregate_reactivity  = ipasuite.workflow.scripts.tools.aggregate_reactivity:main
    footprint = ipasuite.workflow.scripts.tools.footprint:main
    normalize_reactivity = ipasuite.workflow.scripts.tools.normalize_reactivity:main
    qushape_extract_reactivity = ipasuite.workflow.scripts.tools.qushape_extract_reactivity:main 
    qushape_proj_generator = ipasuite.workflow.scripts.tools.qushape_proj_generator:main 
    shift_reactivity = ipasuite.workflow.scripts.tools.shift_reactivity:main 
    split_fasta = ipasuite.workflow.scripts.tools.split_fasta:main 
    ipasuite_renamer = ipasuite.workflow.scripts.tools.ipasuite_renamer:main
    abif_reader = ipasuite.workflow.scripts.tools.utils.ABIFReader:main_wrapper
